--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/Graphics/pt-BR.lproj/GraphicsSettings.strings
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/Graphics/pt-BR.lproj/GraphicsSettings.strings
@@ -2,17 +2,17 @@
 /* Class = "UITableViewSection"; headerTitle = "Shader Compilation"; ObjectID = "0Hp-gJ-2eG"; */
 "0Hp-gJ-2eG.headerTitle" = "Shader Compilation";
 
-/* Class = "UILabel"; text = "Per-Pixel Lighting"; ObjectID = "0JJ-Dl-Dzd"; */
-"0JJ-Dl-Dzd.text" = "Per-Pixel Lighting";
+/* Class = "UILabel"; text = "Iluminação por Pixel"; ObjectID = "0JJ-Dl-Dzd"; */
+"0JJ-Dl-Dzd.text" = "Iluminação por Pixel";
 
 /* Class = "UILabel"; text = "Disable Bounding Box"; ObjectID = "1m0-8t-Mn1"; */
 "1m0-8t-Mn1.text" = "Disable Bounding Box";
 
-/* Class = "UILabel"; text = "Aspect Ratio"; ObjectID = "4Cz-mQ-iAR"; */
-"4Cz-mQ-iAR.text" = "Aspect Ratio";
+/* Class = "UILabel"; text = "Proporção de ecrã"; ObjectID = "4Cz-mQ-iAR"; */
+"4Cz-mQ-iAR.text" = "Proporção de ecrã";
 
-/* Class = "UINavigationItem"; title = "General"; ObjectID = "5gK-bb-ym4"; */
-"5gK-bb-ym4.title" = "General";
+/* Class = "UINavigationItem"; title = "Geral"; ObjectID = "5gK-bb-ym4"; */
+"5gK-bb-ym4.title" = "Geral";
 
 /* Class = "UILabel"; text = "6x Native (3840x3168) for 4K"; ObjectID = "5wx-F7-0NK"; */
 "5wx-F7-0NK.text" = "6x Native (3840x3168) for 4K";
@@ -29,14 +29,14 @@
 /* Class = "UILabel"; text = "GPU Texture Decoding"; ObjectID = "CQB-7r-OLi"; */
 "CQB-7r-OLi.text" = "GPU Texture Decoding";
 
-/* Class = "UINavigationItem"; title = "Enhancements"; ObjectID = "CTh-oC-ajn"; */
-"CTh-oC-ajn.title" = "Enhancements";
+/* Class = "UINavigationItem"; title = "Melhorias"; ObjectID = "CTh-oC-ajn"; */
+"CTh-oC-ajn.title" = "Melhorias";
 
-/* Class = "UITableViewSection"; headerTitle = "Other"; ObjectID = "D6g-cJ-B7W"; */
-"D6g-cJ-B7W.headerTitle" = "Other";
+/* Class = "UITableViewSection"; headerTitle = "Outro"; ObjectID = "D6g-cJ-B7W"; */
+"D6g-cJ-B7W.headerTitle" = "Outro";
 
-/* Class = "UINavigationItem"; title = "Anisotropic Filtering"; ObjectID = "E6W-P0-4HU"; */
-"E6W-P0-4HU.title" = "Anisotropic Filtering";
+/* Class = "UINavigationItem"; title = "Filtro Anisotrópico"; ObjectID = "E6W-P0-4HU"; */
+"E6W-P0-4HU.title" = "Filtro Anisotrópico";
 
 /* Class = "UILabel"; text = "5x Native (3200x2640)"; ObjectID = "EKI-bu-6U3"; */
 "EKI-bu-6U3.text" = "5x Native (3200x2640)";
@@ -65,29 +65,29 @@
 /* Class = "UILabel"; text = "Synchronous (Ubershaders)"; ObjectID = "JV5-g2-2Ro"; */
 "JV5-g2-2Ro.text" = "Synchronous (Ubershaders)";
 
-/* Class = "UILabel"; text = "Disable Fog"; ObjectID = "Jp9-YG-fFU"; */
-"Jp9-YG-fFU.text" = "Disable Fog";
+/* Class = "UILabel"; text = "Desactivar Nevoeiro"; ObjectID = "Jp9-YG-fFU"; */
+"Jp9-YG-fFU.text" = "Desactivar Nevoeiro";
 
 /* Class = "UILabel"; text = "Backend"; ObjectID = "KuT-dh-F8a"; */
 "KuT-dh-F8a.text" = "Backend";
 
-/* Class = "UILabel"; text = "Fast"; ObjectID = "LCC-Te-e70"; */
-"LCC-Te-e70.text" = "Fast";
+/* Class = "UILabel"; text = "Rápido"; ObjectID = "LCC-Te-e70"; */
+"LCC-Te-e70.text" = "Rápido";
 
 /* Class = "UILabel"; text = "Store XFB Copies to Texture Only"; ObjectID = "M18-ia-W0B"; */
 "M18-ia-W0B.text" = "Store XFB Copies to Texture Only";
 
-/* Class = "UILabel"; text = "Enhancements"; ObjectID = "PdH-nE-Ghg"; */
-"PdH-nE-Ghg.text" = "Enhancements";
+/* Class = "UILabel"; text = "Melhorias"; ObjectID = "PdH-nE-Ghg"; */
+"PdH-nE-Ghg.text" = "Melhorias";
 
-/* Class = "UILabel"; text = "Accuracy"; ObjectID = "PhH-xb-F6t"; */
-"PhH-xb-F6t.text" = "Accuracy";
+/* Class = "UILabel"; text = "Precisão"; ObjectID = "PhH-xb-F6t"; */
+"PhH-xb-F6t.text" = "Precisão";
 
 /* Class = "UILabel"; text = "16:9"; ObjectID = "Q84-dr-3b6"; */
 "Q84-dr-3b6.text" = "16:9";
 
-/* Class = "UILabel"; text = "Internal Resolution"; ObjectID = "QzX-GC-ybU"; */
-"QzX-GC-ybU.text" = "Internal Resolution";
+/* Class = "UILabel"; text = "Resolução Interna"; ObjectID = "QzX-GC-ybU"; */
+"QzX-GC-ybU.text" = "Resolução Interna";
 
 /* Class = "UILabel"; text = "16x"; ObjectID = "RnS-Zb-Fvf"; */
 "RnS-Zb-Fvf.text" = "16x";
@@ -95,11 +95,11 @@
 /* Class = "UILabel"; text = "4x Native (2560x2112) for 1440p"; ObjectID = "SSy-g0-mPk"; */
 "SSy-g0-mPk.text" = "4x Native (2560x2112) for 1440p";
 
-/* Class = "UILabel"; text = "Anisotropic Filtering"; ObjectID = "Skl-PD-WnK"; */
-"Skl-PD-WnK.text" = "Anisotropic Filtering";
+/* Class = "UILabel"; text = "Filtro Anisotrópico"; ObjectID = "Skl-PD-WnK"; */
+"Skl-PD-WnK.text" = "Filtro Anisotrópico";
 
-/* Class = "UILabel"; text = "Safe"; ObjectID = "TGq-7C-aJD"; */
-"TGq-7C-aJD.text" = "Safe";
+/* Class = "UILabel"; text = "Seguro"; ObjectID = "TGq-7C-aJD"; */
+"TGq-7C-aJD.text" = "Seguro";
 
 /* Class = "UILabel"; text = "Native (640x528)"; ObjectID = "U3R-RE-wrE"; */
 "U3R-RE-wrE.text" = "Native (640x528)";
@@ -119,17 +119,17 @@
 /* Class = "UILabel"; text = "Store EFB Copies to Texture Only"; ObjectID = "Y8a-Ay-DoO"; */
 "Y8a-Ay-DoO.text" = "Store EFB Copies to Texture Only";
 
-/* Class = "UILabel"; text = "Type"; ObjectID = "YYq-jr-mf8"; */
-"YYq-jr-mf8.text" = "Type";
+/* Class = "UILabel"; text = "Tipo"; ObjectID = "YYq-jr-mf8"; */
+"YYq-jr-mf8.text" = "Tipo";
 
-/* Class = "UITableViewSection"; headerTitle = "Texture Cache"; ObjectID = "bH4-hd-zlv"; */
-"bH4-hd-zlv.headerTitle" = "Texture Cache";
+/* Class = "UITableViewSection"; headerTitle = "Cache de Textura"; ObjectID = "bH4-hd-zlv"; */
+"bH4-hd-zlv.headerTitle" = "Cache de Textura";
 
 /* Class = "UILabel"; text = "Defer EFB Copies to RAM"; ObjectID = "bXh-Hx-pED"; */
 "bXh-Hx-pED.text" = "Defer EFB Copies to RAM";
 
-/* Class = "UILabel"; text = "Stretch to Window"; ObjectID = "bmF-fV-4T8"; */
-"bmF-fV-4T8.text" = "Stretch to Window";
+/* Class = "UILabel"; text = "Ajustar à janela"; ObjectID = "bmF-fV-4T8"; */
+"bmF-fV-4T8.text" = "Ajustar à janela";
 
 /* Class = "UILabel"; text = "Null"; ObjectID = "boB-ud-v0p"; */
 "boB-ud-v0p.text" = "Null";
@@ -137,26 +137,26 @@
 /* Class = "UILabel"; text = "Vulkan"; ObjectID = "cUR-qy-iP1"; */
 "cUR-qy-iP1.text" = "Vulkan";
 
-/* Class = "UILabel"; text = "Advanced"; ObjectID = "dQQ-I9-Ulq"; */
-"dQQ-I9-Ulq.text" = "Advanced";
+/* Class = "UILabel"; text = "Avançadas"; ObjectID = "dQQ-I9-Ulq"; */
+"dQQ-I9-Ulq.text" = "Avançadas";
 
 /* Class = "UILabel"; text = "Disable Copy Filter"; ObjectID = "eOJ-Ic-E7Z"; */
 "eOJ-Ic-E7Z.text" = "Disable Copy Filter";
 
-/* Class = "UILabel"; text = "Show FPS"; ObjectID = "ed5-iw-Rp5"; */
-"ed5-iw-Rp5.text" = "Show FPS";
+/* Class = "UILabel"; text = "Mostrar FPS"; ObjectID = "ed5-iw-Rp5"; */
+"ed5-iw-Rp5.text" = "Mostrar FPS";
 
-/* Class = "UINavigationItem"; title = "Internal Resolution"; ObjectID = "f7Y-b5-U6K"; */
-"f7Y-b5-U6K.title" = "Internal Resolution";
+/* Class = "UINavigationItem"; title = "Resolução Interna"; ObjectID = "f7Y-b5-U6K"; */
+"f7Y-b5-U6K.title" = "Resolução Interna";
 
-/* Class = "UINavigationItem"; title = "Graphics"; ObjectID = "f8i-gK-HxI"; */
-"f8i-gK-HxI.title" = "Graphics";
+/* Class = "UINavigationItem"; title = "Gráficos"; ObjectID = "f8i-gK-HxI"; */
+"f8i-gK-HxI.title" = "Gráficos";
 
 /* Class = "UILabel"; text = "Fast Depth Calculation"; ObjectID = "fNB-Qp-KPf"; */
 "fNB-Qp-KPf.text" = "Fast Depth Calculation";
 
-/* Class = "UILabel"; text = "Ignore Format Changes"; ObjectID = "g9b-oy-vim"; */
-"g9b-oy-vim.text" = "Ignore Format Changes";
+/* Class = "UILabel"; text = "Ignorar Mudanças de Formato"; ObjectID = "g9b-oy-vim"; */
+"g9b-oy-vim.text" = "Ignorar Mudanças de Formato";
 
 /* Class = "UILabel"; text = "Synchronous"; ObjectID = "gmt-s1-lH4"; */
 "gmt-s1-lH4.text" = "Synchronous";
@@ -167,14 +167,14 @@
 /* Class = "UILabel"; text = "Immediately Present XFB"; ObjectID = "hiz-TR-uFn"; */
 "hiz-TR-uFn.text" = "Immediately Present XFB";
 
-/* Class = "UILabel"; text = "Auto"; ObjectID = "jAa-cL-Rjh"; */
-"jAa-cL-Rjh.text" = "Auto";
+/* Class = "UILabel"; text = "Automático"; ObjectID = "jAa-cL-Rjh"; */
+"jAa-cL-Rjh.text" = "Automático";
 
 /* Class = "UILabel"; text = "3x Native (1920x1584) for 1080p"; ObjectID = "jJs-ou-NxC"; */
 "jJs-ou-NxC.text" = "3x Native (1920x1584) for 1080p";
 
-/* Class = "UILabel"; text = "General"; ObjectID = "jjY-Es-Kzy"; */
-"jjY-Es-Kzy.text" = "General";
+/* Class = "UILabel"; text = "Geral"; ObjectID = "jjY-Es-Kzy"; */
+"jjY-Es-Kzy.text" = "Geral";
 
 /* Class = "UILabel"; text = "Vertex Rounding"; ObjectID = "kV2-YB-mFd"; */
 "kV2-YB-mFd.text" = "Vertex Rounding";
@@ -182,14 +182,14 @@
 /* Class = "UILabel"; text = "Software Renderer"; ObjectID = "lIB-f6-qZI"; */
 "lIB-f6-qZI.text" = "Software Renderer";
 
-/* Class = "UITableViewSection"; headerTitle = "Basic"; ObjectID = "mGF-H0-YAg"; */
-"mGF-H0-YAg.headerTitle" = "Basic";
+/* Class = "UITableViewSection"; headerTitle = "Básico"; ObjectID = "mGF-H0-YAg"; */
+"mGF-H0-YAg.headerTitle" = "Básico";
 
-/* Class = "UILabel"; text = "Widescreen Hack"; ObjectID = "myf-Wb-hBV"; */
-"myf-Wb-hBV.text" = "Widescreen Hack";
+/* Class = "UILabel"; text = "Hack de Ecrã Panorâmico"; ObjectID = "myf-Wb-hBV"; */
+"myf-Wb-hBV.text" = "Hack de Ecrã Panorâmico";
 
-/* Class = "UILabel"; text = "Auto (Multiple of 640x528)"; ObjectID = "nNo-B4-PCq"; */
-"nNo-B4-PCq.text" = "Auto (Multiple of 640x528)";
+/* Class = "UILabel"; text = "Automático (Multiplo de 640x528)"; ObjectID = "nNo-B4-PCq"; */
+"nNo-B4-PCq.text" = "Automático (Multiplo de 640x528)";
 
 /* Class = "UINavigationItem"; title = "Shader Compilation"; ObjectID = "ohZ-y2-lIa"; */
 "ohZ-y2-lIa.title" = "Shader Compilation";
@@ -197,11 +197,11 @@
 /* Class = "UILabel"; text = "Arbitrary Mipmap Detection"; ObjectID = "pMs-1L-1dY"; */
 "pMs-1L-1dY.text" = "Arbitrary Mipmap Detection";
 
-/* Class = "UILabel"; text = "Scaled EFB Copy"; ObjectID = "s0l-GD-nfn"; */
-"s0l-GD-nfn.text" = "Scaled EFB Copy";
+/* Class = "UILabel"; text = "Cópia EFB Escalada"; ObjectID = "s0l-GD-nfn"; */
+"s0l-GD-nfn.text" = "Cópia EFB Escalada";
 
-/* Class = "UILabel"; text = "Force Texture Filtering"; ObjectID = "sWs-Hb-DWK"; */
-"sWs-Hb-DWK.text" = "Force Texture Filtering";
+/* Class = "UILabel"; text = "Forçar Filtro de Textura"; ObjectID = "sWs-Hb-DWK"; */
+"sWs-Hb-DWK.text" = "Forçar Filtro de Textura";
 
 /* Class = "UILabel"; text = "2x"; ObjectID = "tne-SZ-I6X"; */
 "tne-SZ-I6X.text" = "2x";
@@ -209,8 +209,8 @@
 /* Class = "UILabel"; text = "8x Native (5120x4224) for 5K"; ObjectID = "u1l-8D-mFj"; */
 "u1l-8D-mFj.text" = "8x Native (5120x4224) for 5K";
 
-/* Class = "UINavigationItem"; title = "Aspect Ratio"; ObjectID = "ubg-gf-CKs"; */
-"ubg-gf-CKs.title" = "Aspect Ratio";
+/* Class = "UINavigationItem"; title = "Proporção de ecrã"; ObjectID = "ubg-gf-CKs"; */
+"ubg-gf-CKs.title" = "Proporção de ecrã";
 
 /* Class = "UILabel"; text = "1x"; ObjectID = "ufh-Et-UDN"; */
 "ufh-Et-UDN.text" = "1x";
@@ -224,14 +224,14 @@
 /* Class = "UILabel"; text = "Show NetPlay Messages"; ObjectID = "vVd-gU-Rn3"; */
 "vVd-gU-Rn3.text" = "Show NetPlay Messages";
 
-/* Class = "UILabel"; text = "Skip EFB Access from CPU"; ObjectID = "xLh-SQ-2m3"; */
-"xLh-SQ-2m3.text" = "Skip EFB Access from CPU";
+/* Class = "UILabel"; text = "Ignorar o acesso do EFB a partir do CPU"; ObjectID = "xLh-SQ-2m3"; */
+"xLh-SQ-2m3.text" = "Ignorar o acesso do EFB a partir do CPU";
 
-/* Class = "UITableViewSection"; headerTitle = "Other"; ObjectID = "xsF-Eo-4KA"; */
-"xsF-Eo-4KA.headerTitle" = "Other";
+/* Class = "UITableViewSection"; headerTitle = "Outro"; ObjectID = "xsF-Eo-4KA"; */
+"xsF-Eo-4KA.headerTitle" = "Outro";
 
-/* Class = "UINavigationItem"; title = "Anti-Aliasing"; ObjectID = "y9H-fG-lRi"; */
-"y9H-fG-lRi.title" = "Anti-Aliasing";
+/* Class = "UINavigationItem"; title = "Anti-Serrilhamento"; ObjectID = "y9H-fG-lRi"; */
+"y9H-fG-lRi.title" = "Anti-Serrilhamento";
 
 /* Class = "UILabel"; text = "2x Native (1280x1056) for 720p"; ObjectID = "yPP-e3-670"; */
 "yPP-e3-670.text" = "2x Native (1280x1056) for 720p";
