--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/pt-BR.lproj/Settings.strings
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/pt-BR.lproj/Settings.strings
@@ -5,11 +5,11 @@
 /* Class = "UILabel"; text = "Patrons 2"; ObjectID = "4zt-R7-qCU"; */
 "4zt-R7-qCU.text" = "Patrons 2";
 
-/* Class = "UILabel"; text = "Graphics"; ObjectID = "6BT-cH-KPV"; */
-"6BT-cH-KPV.text" = "Graphics";
+/* Class = "UILabel"; text = "Gráficos"; ObjectID = "6BT-cH-KPV"; */
+"6BT-cH-KPV.text" = "Gráficos";
 
-/* Class = "UILabel"; text = "About Dolphin"; ObjectID = "AZC-s5-S3W"; */
-"AZC-s5-S3W.text" = "About Dolphin";
+/* Class = "UILabel"; text = "Sobre o Dolphin"; ObjectID = "AZC-s5-S3W"; */
+"AZC-s5-S3W.text" = "Sobre o Dolphin";
 
 /* Class = "UILabel"; text = "Thank you to the following generous Patrons!"; ObjectID = "Apg-2S-OEc"; */
 "Apg-2S-OEc.text" = "Thank you to the following generous Patrons!";
@@ -20,8 +20,8 @@
 /* Class = "UILabel"; text = "© 2003-2015+ Dolphin Team. “GameCube” and “Wii” are trademarks of Nintendo. \nDolphin is not affiliated with Nintendo in any way."; ObjectID = "Iw7-Nn-kBa"; */
 "Iw7-Nn-kBa.text" = "© 2003-2015+ Dolphin Team. “GameCube” and “Wii” are trademarks of Nintendo. \nDolphin is not affiliated with Nintendo in any way.";
 
-/* Class = "UINavigationItem"; title = "About Dolphin"; ObjectID = "RI4-PG-OKc"; */
-"RI4-PG-OKc.title" = "About Dolphin";
+/* Class = "UINavigationItem"; title = "Sobre o Dolphin"; ObjectID = "RI4-PG-OKc"; */
+"RI4-PG-OKc.title" = "Sobre o Dolphin";
 
 /* Class = "UIButton"; normalTitle = "Source Code"; ObjectID = "Sud-8v-xe3"; */
 "Sud-8v-xe3.normalTitle" = "Source Code";
@@ -38,8 +38,8 @@
 /* Class = "UILabel"; text = "Donate"; ObjectID = "cRV-Hq-IOP"; */
 "cRV-Hq-IOP.text" = "Donate";
 
-/* Class = "UILabel"; text = "Help"; ObjectID = "dfe-JF-PdQ"; */
-"dfe-JF-PdQ.text" = "Help";
+/* Class = "UILabel"; text = "Ajuda"; ObjectID = "dfe-JF-PdQ"; */
+"dfe-JF-PdQ.text" = "Ajuda";
 
 /* Class = "UILabel"; text = "This software should not be used to play games you do not legally own."; ObjectID = "f6q-Ez-JFr"; */
 "f6q-Ez-JFr.text" = "This software should not be used to play games you do not legally own.";
@@ -47,14 +47,14 @@
 /* Class = "UILabel"; text = "Version"; ObjectID = "fTF-PL-Io8"; */
 "fTF-PL-Io8.text" = "Version";
 
-/* Class = "UILabel"; text = "Config"; ObjectID = "n0Q-3C-VDC"; */
-"n0Q-3C-VDC.text" = "Config";
+/* Class = "UILabel"; text = "Configurar"; ObjectID = "n0Q-3C-VDC"; */
+"n0Q-3C-VDC.text" = "Configurar";
 
 /* Class = "UILabel"; text = "Patrons 1"; ObjectID = "qg5-mQ-I0A"; */
 "qg5-mQ-I0A.text" = "Patrons 1";
 
-/* Class = "UIViewController"; title = "About Dolphin"; ObjectID = "u6n-zE-oUh"; */
-"u6n-zE-oUh.title" = "About Dolphin";
+/* Class = "UIViewController"; title = "Sobre o Dolphin"; ObjectID = "u6n-zE-oUh"; */
+"u6n-zE-oUh.title" = "Sobre o Dolphin";
 
 /* Class = "UILabel"; text = "Controllers"; ObjectID = "xpQ-qK-CHk"; */
 "xpQ-qK-CHk.text" = "Controllers";
